# On-the-fly-Conversion

./: CMakeLists.txt  README.md  conversion.h  convertion.h  main.cpp
conversions/: FetchLibraries.cmake  jpg2png.h  png2jpg.h  stb_convertions.cpp  txt2md.h
convertions/: FetchLibraries.cmake  txt_to_md.h
